--- a/EstacionamentoFinal/EstacionamentoFinal.csproj
+++ b/EstacionamentoFinal/EstacionamentoFinal.csproj
@@ -46,11 +46,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -149,9 +149,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201906091801589_AlterarVaga.cs" />
-    <Compile Include="Migrations\201906091801589_AlterarVaga.Designer.cs">
-      <DependentUpon>201906091801589_AlterarVaga.cs</DependentUpon>
+    <Compile Include="Migrations\201906141750232_Restartando.cs" />
+    <Compile Include="Migrations\201906141750232_Restartando.Designer.cs">
+      <DependentUpon>201906141750232_Restartando.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906141939596_alterar_controler_mov.cs" />
+    <Compile Include="Migrations\201906141939596_alterar_controler_mov.Designer.cs">
+      <DependentUpon>201906141939596_alterar_controler_mov.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CategoriaVeiculo.cs" />
@@ -163,6 +167,7 @@
     <Compile Include="Models\Veiculo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\EncurtarSetor.cs" />
+    <Compile Include="Util\SubtrairHora.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -190,6 +195,9 @@
     <Content Include="Views\Movimentacao\Index.cshtml" />
     <Content Include="Views\Movimentacao\Cadastrar.cshtml" />
     <Content Include="Views\Movimentacao\Alterar.cshtml" />
+    <Content Include="Views\Movimentacao\Saida.cshtml" />
+    <Content Include="Views\Vaga\Historico.cshtml" />
+    <Content Include="Views\Movimentacao\Finalizadas.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -204,8 +212,11 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201906091801589_AlterarVaga.resx">
-      <DependentUpon>201906091801589_AlterarVaga.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201906141750232_Restartando.resx">
+      <DependentUpon>201906141750232_Restartando.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906141939596_alterar_controler_mov.resx">
+      <DependentUpon>201906141939596_alterar_controler_mov.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
