--- a/EstacionamentoFinal/EstacionamentoFinal.csproj
+++ b/EstacionamentoFinal/EstacionamentoFinal.csproj
@@ -95,6 +95,8 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -146,11 +148,33 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Global.asax" />
+    <None Include="Service References\ServiceReferenceCEP\configuration91.svcinfo" />
+    <None Include="Service References\ServiceReferenceCEP\configuration.svcinfo" />
+    <Content Include="Service References\ServiceReferenceCEP\EstacionamentoFinal.ServiceReferenceCEP.cResultado.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReferenceCEP\EstacionamentoFinal.ServiceReferenceCEP.cResultadoModal.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReferenceCEP\EstacionamentoFinal.ServiceReferenceCEP.cResultadoObjeto.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReferenceCEP\EstacionamentoFinal.ServiceReferenceCEP.cResultadoServicos.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\ServiceReferenceCEP\EstacionamentoFinal.ServiceReferenceCEP.versao.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Service References\ServiceReferenceCEP\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ExternoAPIController.cs" />
     <Compile Include="Controllers\FuncionarioController.cs" />
     <Compile Include="Controllers\IndexController.cs" />
     <Compile Include="Controllers\MovimentacaoController.cs" />
@@ -186,6 +210,11 @@
     <Compile Include="Models\Vaga.cs" />
     <Compile Include="Models\Veiculo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\ServiceReferenceCEP\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Util\CalculoHora.cs" />
     <Compile Include="Util\EncurtarSetor.cs" />
     <Compile Include="Util\SubtrairHora.cs" />
@@ -227,6 +256,8 @@
     <Content Include="Views\WebService\Index.cshtml" />
     <Content Include="Views\Movimentacao\Buscar.cshtml" />
     <Content Include="Views\Movimentacao\BuscarMovimentacaoData.cshtml" />
+    <Content Include="Views\ExternoAPI\Index.cshtml" />
+    <None Include="Service References\ServiceReferenceCEP\CalcPrecoPrazo.wsdl" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -247,6 +278,12 @@
     <EmbeddedResource Include="Migrations\201907021030327_Requireds.resx">
       <DependentUpon>201907021030327_Requireds.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceReferenceCEP\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
