--- a/EstacionamentoFinal/Web.config
+++ b/EstacionamentoFinal/Web.config
@@ -65,4 +65,25 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="CalcPrecoPrazoWSSoap" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="CalcPrecoPrazoWSSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://ws.correios.com.br/calculador/CalcPrecoPrazo.asmx"
+        binding="basicHttpBinding" bindingConfiguration="CalcPrecoPrazoWSSoap"
+        contract="ServiceReferenceCEP.CalcPrecoPrazoWSSoap" name="CalcPrecoPrazoWSSoap" />
+      <!--<endpoint address="http://ws.correios.com.br/calculador/CalcPrecoPrazo.asmx"
+        binding="customBinding" bindingConfiguration="CalcPrecoPrazoWSSoap12"
+        contract="ServiceReferenceCEP.CalcPrecoPrazoWSSoap" name="CalcPrecoPrazoWSSoap12" />-->
+    </client>
+  </system.serviceModel>
 </configuration>
