--- a/EstacionamentoFinal/Web.config
+++ b/EstacionamentoFinal/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -78,9 +78,7 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://ws.correios.com.br/calculador/CalcPrecoPrazo.asmx"
-        binding="basicHttpBinding" bindingConfiguration="CalcPrecoPrazoWSSoap"
-        contract="ServiceReferenceCEP.CalcPrecoPrazoWSSoap" name="CalcPrecoPrazoWSSoap" />
+      <endpoint address="http://ws.correios.com.br/calculador/CalcPrecoPrazo.asmx" binding="basicHttpBinding" bindingConfiguration="CalcPrecoPrazoWSSoap" contract="ServiceReferenceCEP.CalcPrecoPrazoWSSoap" name="CalcPrecoPrazoWSSoap" />
       <!--<endpoint address="http://ws.correios.com.br/calculador/CalcPrecoPrazo.asmx"
         binding="customBinding" bindingConfiguration="CalcPrecoPrazoWSSoap12"
         contract="ServiceReferenceCEP.CalcPrecoPrazoWSSoap" name="CalcPrecoPrazoWSSoap12" />-->
